--- a/package.json
+++ b/package.json
@@ -6,22 +6,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
+    "framer-motion": "^12.23.24",
+    "i18next": "^25.6.3",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@react-three/fiber": "^9.4.0",
-    "@react-three/drei": "^10.7.7",
-    "three": "^0.181.2",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.554.0",
     "react-i18next": "^16.3.4",
-    "i18next": "^25.6.3"
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
